--- a/ripx/css/index.css
+++ b/ripx/css/index.css
@@ -1,12 +1,17 @@
 *{margin:0; padding:0; list-style: none; text-decoration: none;}
 body{background:black;}
+h1{
+    color: white;
+    text-align:center;
+
+}
 .warp{width:100%; height:100%;}
 .warp img{width:100%; height:100%;}
 .top_content{position:relative; width:100%;height:100%; z-index:101; }
 .top_content_h2{position: absolute;  top: 50%; left: 50%;
     transform: translate(-50%, -50%); font-size: 30px; z-index: 2; color: white;text-align: center;
     font-weight: 600;font-family: 'Oswald', sans-serif;}
-.middle_content{position:relative; width: calc(100% - 100px);max-width: 1500px; background: black; height:5000px; z-index:90;top:-10px; margin:0 auto;}
+.middle_content{position:relative; width: calc(100% - 100px);max-width: 1500px; background: black; height:2680px; z-index:90;top:0; margin:0 auto;}
 .middle_content .img_content {width: calc(100% - 80px);padding-left: 80px; background: white;}
 .content_array{width:auto; height:auto;}
 
@@ -44,6 +49,39 @@ body{background:black;}
 .menu_inner { width:1400px; height:80px; margin:8%; }
 .fixed { background:rgba(0,0,0,0.3); transition:all 0.5s ease-in-out; -webkit-transition:all 0.5s ease-in-out; }
 .logo a { float:left; font-size:30px; line-height:80px; color:#000; }
-.menu_box .menu_inner > ul { float:right; padding:0 35px 0 0; }
+.menu_box .menu_inner > ul {
+
+    margin-right: -30px;
+    padding: 0 35px 0 0;
+    width: 100%;
+    position: relative;
+    right: -14%;
+}
 .menu_box .menu_inner li { float:left; text-align:center; margin-left:65px; }
 .menu_box .menu_inner li a { text-decoration:none; color: #ffffff; line-height:80px; font-size:12px; }
+
+
+/* 두번째 컨텐츠 */
+#section02>h1{text-align: unset;}
+.second_content{position:relative; width: calc(100% - 100px);max-width: 1500px;
+    background: black; height:2500px; z-index:90;top:0; margin:0 auto;}
+.h3_array{width:50%; height:auto; color: #03070e; float:right; padding:3%; transition-duration:1s; transform:translateX(-400px); z-index:1;}
+.h3_p{width:60%; float:left;}
+.h3_p2{width:40%; float:left;}
+.h3_content{
+
+}
+.content_array>div:hover .h3_array{transform: translateX(30px);
+   transition-duration:1s; color:white;}
+.content_array{width:100%; height:auto;}
+
+.content_array>.img_array_7{ height:500px; width:100%; padding:0; margin:0;}
+.img_array_7>img{width:auto; z-index:101; position:relative;}
+.img_array_7>.h3_array>.h3_p{float:none;}
+.content_array>.img_array_8{ height:350px; width:100%; padding:0; margin:0;     padding-top: 3%;}
+.img_array_8>img{width:auto; max-width:329px; height:329px; position:relative; z-index:101;}
+.img_array_8>.h3_p{float:left;}
+
+.content_array>.img_array_9{ height:500px; width:100%; padding:0; margin:0;     padding-top: 3%;}
+.img_array_9>img{width:auto; max-width:329px; height:329px; position:relative; z-index:101;z-index:101;}
+.img_array_9>.h3_array>.h3_p{float:none;}
