--- a/ripx/css/media.css
+++ b/ripx/css/media.css
@@ -98,6 +98,13 @@
         color: white;
         width: 100%;
     }
+    .menu_box .menu_inner > ul {
+        margin-right: -30px;
+        padding: 0 35px 0 0;
+        width: 100%;
+        position: relative;
+        right: -10%;
+    }
 
 
 
