--- a/html_p/index.css
+++ b/html_p/index.css
@@ -34,7 +34,9 @@ body {
     min-height: 100vh;
     padding: 15vh 100px;
     position: relative;
-    box-sizing: border-box;}
+    box-sizing: border-box;
+    min-height:1000px;
+   }
 .banner_left{width:50%; float:left;}
 .banner_right{      padding-left: 30px; border-left: 1px solid black; float:right; text-align: right; line-height: 181%; font-size:30px;}
 .banner_right #NSJ{font-size:50px; letter-spacing: -1px;}
@@ -47,11 +49,13 @@ body {
     table-layout: fixed;
     background-color:gray;
 }
-#me{background-color:#1895c5; width:50%;text-align:right;     display: table-cell;}
+#me{background-color:#1895c5; width:50%;text-align:right;     display: table-cell; position:relative;}
+.me_intro{position:relative; }
 .me_intro div a {color: white; font-family: sans-serif; font-weight: 500; font-size: 18px; }
 .intro{   display: block;font-size: 24px;opacity: .5;speak: none;     margin-top: -40px; color:white;}
 .about{font-size: 58px;line-height: 0; color:white;     font-weight: 500;}
-#skill{background: #1ca8dd; text-align: left; width:50%;     display: table-cell;}
+#skill{background: #1ca8dd; text-align: left; width:50%;     display: table-cell; position:relative;}
+.skill_intro{position:relative;}
 .skill_style{margin-top:30px; color:white;  font-family: sans-serif;font-weight: 500;}
 #ppt{    min-height: 100vh;
     padding: 15vh 100px;
@@ -61,11 +65,12 @@ body {
 }
 .ppt_header{   line-height: 1;font-family: sans-serif;    text-align: center;     margin-top: -46px;}
 .ppt_content{margin-top:110px;}
-.ppt_contents{}
-.ppt_img img{width:52%; float:left;}
+.ppt_img1, .ppt_img2,.ppt_img3{    position: relative;}
+.ppt_img1 img ,.ppt_img2 img ,.ppt_img3 img{width:52%; float:left;}
 .ppt_contents_p{ width:41%; float:right; margin-right:30px;      font-size: 20px; font-family: sans-serif; line-hieght: 1;}
 .ppt_contents_p2{  margin-top: 30px;}
 table{    width: 100%;}
+table th{background:lightskyblue;}
 table thead th {
     background-color: rgba(77,128,153,0.05);
     border-top-width: 1px;
