--- a/html_p/css/index.css
+++ b/html_p/css/index.css
@@ -1,7 +1,10 @@
+*{list-style:none; text-decoration: none;}
+a:link { color: gray; }
+a:visited { color: gray; }
 body{
     color: black;
     line-height: 2;
-    font-family: "Roboto",system-ui,-apple-system,BlinkMacSystemFont,"Malgun Gothic",Segoe UI,Roboto,Oxygen,Ubuntu,Cantarell,Fira Sans,Droid Sans,Helvetica Neue,sans-serif;
+    font-family: "Roboto",system-ui,-apple-system,BlinkMacSystemFont,"Malgun Gothic",Segoe UI,Roboto,Oxygen,Ubuntu,Cantarell,Fira Sans,Droid Sans,Helvetica Neue,sans-serif,'Squada One', cursive;;
     font-weight: 400;
     -webkit-text-size-adjust: none;
     -moz-text-size-adjust: none;
@@ -26,19 +29,35 @@ html, body, body, form {
 body {
     display: block;
 }
+header{position: fixed !important;
+    width: 100%;
+    min-height: 55px;
+    z-index: 997;
+    padding-top: 17px;
+    top: 0;}
+.top{width:50px; height:50px; position:fixed; z-index: 99; left: 95%;top: 93%;}
+.top img{    width: 50px;height: 50px;}
+header{}
 .set{    min-height: 100vh;
-    padding: 15vh 100px;
-    position: relative;
-    box-sizing: border-box;}
-.banner{background-color:white;
-    min-height: 100vh;
-    padding: 15vh 100px;
+/*    padding: 15vh 100px;*/
     position: relative;
     box-sizing: border-box;
-    min-height:1000px;
+    transition:all 500ms linear;
+z-index:1;
+}
+
+.banner{background-color:white;
+    min-height: 100vh;
+    padding: 11vh 100px;
+    position: relative;
+    box-sizing: border-box;
+    max-height: 100vh;
    }
-.banner_left{width:50%; float:left;}
-.banner_right{      padding-left: 30px; border-left: 1px solid black; float:right; text-align: right; line-height: 181%; font-size:30px;}
+.banner_inner{    width: 100%;
+    height: 90%;min-height: 230px;}
+.banner_out{width:100%; height:100%;}
+.banner_left{width:50%; float:left; transition:all 500ms linear;}
+.banner_right{      padding-left: 30px;  float:right; text-align: right; line-height: 181%; font-size:30px; width:45%; transition:all 500ms linear;}
 .banner_right #NSJ{font-size:50px; letter-spacing: -1px;}
 .introduction{
     display: table;
@@ -48,29 +67,39 @@ body {
     border-spacing: 0;
     table-layout: fixed;
     background-color:gray;
+    position: relative;
 }
 #me{background-color:#1895c5; width:50%;text-align:right;     display: table-cell; position:relative;}
-.me_intro{position:relative; }
+.me_intro{position:relative; z-index:55;}
 .me_intro div a {color: white; font-family: sans-serif; font-weight: 500; font-size: 18px; }
-.intro{   display: block;font-size: 24px;opacity: .5;speak: none;     margin-top: -40px; color:white;}
-.about{font-size: 58px;line-height: 0; color:white;     font-weight: 500;}
+.intro{   display: block;font-size: 24px;opacity: .5;speak: none;     margin-top: -40px;}
+.about{font-size: 58px;line-height: 0;  font-weight: 500;}
 #skill{background: #1ca8dd; text-align: left; width:50%;     display: table-cell; position:relative;}
 .skill_intro{position:relative;}
-.skill_style{margin-top:30px; color:white;  font-family: sans-serif;font-weight: 500;}
+.skill_style{margin-top:15px; font-family: sans-serif;font-weight: 500; width:33%; height:150px; float:left;}
+.skill_tittle{font-size: 19px; line-height: 1; background-color:gray; color:white; font-family: 'Francois One', sans-serif; padding: 2px 4px 2px 2px;}
 #ppt{    min-height: 100vh;
-    padding: 15vh 100px;
+/*    padding: 15vh 100px;*/
     position: relative;
     box-sizing: border-box;
     background-color:white;
 }
+.ppt_first{  background-color: white;
+    min-height: 100vh;
+    padding: 11vh 100px;
+    position: relative;
+    box-sizing: border-box;
+    max-height: 100vh;}
 .ppt_header{   line-height: 1;font-family: sans-serif;    text-align: center;     margin-top: -46px;}
-.ppt_content{margin-top:110px;}
+.ppt_table{    margin-top: 30px;}
+/*.ppt_content{margin-top:110px;}*/
 .ppt_img1, .ppt_img2,.ppt_img3{    position: relative;}
 .ppt_img1 img ,.ppt_img2 img ,.ppt_img3 img{width:52%; float:left;}
 .ppt_contents_p{ width:41%; float:right; margin-right:30px;      font-size: 20px; font-family: sans-serif; line-hieght: 1;}
 .ppt_contents_p2{  margin-top: 30px;}
 table{    width: 100%;}
-table th{background:lightskyblue;}
+table th{color:white;}
+table th{background: rgba(36, 36, 36, 0.99);}
 table thead th {
     background-color: rgba(77,128,153,0.05);
     border-top-width: 1px;
@@ -83,5 +112,5 @@ table th, table td {
     text-align: left;
 }
 
-footer{width:100%; height:100px;background-color: #444444;}
+footer{width:100%; height:100px;background-color: #444444; margin-top: 23%;}
 .footer_one{font-size:30px; text-align:center; color:white; font-family: sans-serif;}
