--- a/html_p/css/banner_img.css
+++ b/html_p/css/banner_img.css
@@ -3,8 +3,8 @@ nav  {    font-size: 19px;}
 nav a {width: 100%; color:gray; }
 nav h2{margin: 0;
     padding: 0;}
-nav div{ition:all .2s; width: 80%; cursor: pointer;}
-nav div:hover{  ition:all .2s; background-color:black; }
+nav div{ width: 80%; cursor: pointer;}
+nav div:hover{  background-color:black; }
 nav div:hover {color:white; }
 nav div:hover h2 a{color:white;}
 
