--- a/html_p/css/index.css
+++ b/html_p/css/index.css
@@ -64,7 +64,7 @@ z-index:1;
 .banner_left{width:50%; float:left; transition:all 500ms linear;}
 .banner_right{      padding-left: 30px;  float:right; text-align: right; line-height: 181%; font-size:30px; width:45%; transition:all 500ms linear;}
 .banner_right #NSJ{font-size:50px; letter-spacing: -1px;}
-.introduction{width:100%;position:relative;}
+.introduction{margin-top:20%;width:100%;position:relative;}
 .introduction img{width:100%; height:auto;}
 #git{	padding: 5px 10px;
     text-align: center;
@@ -109,7 +109,7 @@ z-index:1;
 #skill{background: #1ca8dd; text-align: left; width:50%;     display: table-cell; position:relative;}
 .skill_intro{position:relative;}
 .skill_style{margin-top:15px; font-family: sans-serif;font-weight: 500; width:33%; height:150px; float:left;}
-.skill_tittle{font-size: 19px; line-height: 1; background-color:gray; color:white; font-family: 'Francois One', sans-serif; padding: 2px 4px 2px 2px;}
+.skill_tittle{color:white;font-size: 19px; line-height: 1; background-color:gray;  font-family: 'Francois One', sans-serif; padding: 2px 4px 2px 2px;}
 #ppt{    min-height: 100vh;
 /*    padding: 15vh 100px;*/
     position: relative;
@@ -122,7 +122,9 @@ z-index:1;
     position: relative;
     box-sizing: border-box;
     max-height: 100vh;
-    margin-top: 15%;}
+    margin-top: 40%;}
+.ppt_first a:visited, .ppt_first a:link {color:blue;    text-decoration: underline;}
+
 .ppt_header{   line-height: 1;font-family: sans-serif;    text-align: center;     margin-top: -46px;}
 .ppt_table{    margin-top: 30px;}
 /*.ppt_content{margin-top:110px;}*/
@@ -145,5 +147,5 @@ table th, table td {
     text-align: left;
 }
 
-footer{width:100%; height:100px;background-color: #444444; margin-top: 23%;}
+footer{width:100%; height:100px;background-color: #444444; margin-top: 40%;}
 .footer_one{font-size:30px; text-align:center; color:white; font-family: sans-serif;}
